# deep_research_agent

./: .dockerignore  Dockerfile  README.md  UV_SETUP.md  app.py  deep_research.py  deepsearch_agent.py  gradio_test.ipynb  main_agent.py  presentation_gen.ipynb  presentation_generator.py  pydantic_testing.ipynb  pyproject.toml  requirements.txt  search_agent.ipynb  streamlit_app.py  table_maker.py
src/: __init__.py
src/agent_tools/: __init__.py
src/deep_research_agent/: __init__.py  main_agent.py
tests/: presentation_generator.py
